# supernote-obsidian-sync

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt  run_obsidian_with_supernote.sh
macos/SupernoteObsidianSync/SupernoteObsidianSync/: ContentView.swift  SettingsWindow.swift  SupernoteObsidianSyncApp.swift
macos/SupernoteObsidianSync/SupernoteObsidianSync.xcodeproj/: project.pbxproj
macos/SupernoteObsidianSync/SupernoteObsidianSync.xcodeproj/project.xcworkspace/xcuserdata/david.xcuserdatad/: UserInterfaceState.xcuserstate
macos/SupernoteObsidianSync/SupernoteObsidianSync.xcodeproj/xcuserdata/david.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/SupernoteObsidianSync/SupernoteObsidianSync/Assets.xcassets/AppIcon.appiconset/: Contents.json
scripts/: hybrid_marker_olmocr_test.py  update_homebrew_formula.sh
src/: menu_bar_app.py  supernote_obsidian_sync.py  supernote_obsidian_sync_backup.py
tests/: test_ocr_providers.py  test_page_cache.py
